2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/02_decal_var_sans_init.deca
// Description :
//      déclaration des variables 
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{
    int x ;

    float f ;

    boolean b ;
}