2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/10_init_bool_par_int.deca
// Description :
//    initialisation d'un boolean par un int 
// Resultats :
//    Erreur Contexteulle : ligne 10 : le int ne peut pas être affecté à boolean
//
// Historique :
// cree le 09/01/2024

{
    boolean b = 1;
}